app/assets/stylesheets/c2g.scss
body {
	min-height: 640px;
}

.page{
    height:100%;   
}
.off-canvas-wrap,.inner-wrap{
    height:100%;   
}

@media (min-width: 1024px) {
	.orgfix {
		position:fixed;
	}
}

.reveal-modal{
	a{
		&:hover{
			background-color: #fff;
			color: #88a4b3;
			font-weight: bold;
		}
	}
}

.button, .expand, input[type=submit] {
	background-color: #fdd68b;
	border-color: #f7d189;
	font-size: 18px;
	padding: 4px 10px;
	color: #000000;
	
	&:hover{
		background-color: #fdd68b;
	}
}

.right {
	padding-right: 7px;
}

.card {
	&:hover{
		box-shadow: 10px 10px 5px #888888;
	}
}

.ui-corner-all{
	&:hover{
	background-color: lighten(#88a4b3, 25%);
	}
}


.orgneeds{
	border-left: 1px solid #888;
}

.panel {
	border-color: #888888;
	border-width: 1px;
	border-style: solid;
	background-color: lighten(#88a4b3, 25%);
	padding: 15px 15px;
	
	&:hover {
		background-color: lighten(#fdd68b, 5%);
	}
} 
.org-panel {
	border-color: #888888;
	border-width: 1px 1px 0px 1px;
	border-style: solid;
	// background-color: lighten(#88a4b3, 15%); 
	padding: 15px 15px;
	height: 60px;
		
	a {
		width: 100%;
		height: 100%;
		&:hover{
			color: #88a4b3;
		}
	}
		
	@media (max-width: 800px) {
		height: 80px;
		padding: 10px 5px;
	}
}

.org-def-panel {
	border-color: #888888;
	border-width: 1px;
	border-style: solid;
	padding: 15px 15px;
	margin-bottom: 15px;

	@media (min-width: 800px) {
		height: 100px;
	}
}

span.middle{
	vertical-align: 50%;
	text-align:center;
}

.org-main-panel {
	border-color: #888888;
	border-width: 1px 1px 0px 1px;
	border-style: solid;
	padding: 10px 10px;
	height: 100px;
	

	a, h4 {
		font-weight: bold;
		
	}
		
	@media (max-width: 800px) {
		height: 140px;
		padding: 10px 5px;
	}
} 

.upper-panel{
	border-color: #888888;
	border-width: 1px 1px 0px 1px;
	border-style: solid;
	padding: 15px 15px;
	height: 120px;
	
	&:hover{
		color: #222;
		h5{color: darken(#88a4b3, 30%);}
		cursor: pointer;
	}
	
	@media (max-width: 800px) {
		height: 180px;
	}
}

.snippet{
	height: 80px;
}

.view-page { 
	padding: 3em 0em; 
	min-height: 640px;

	.button, .expand, input[type=submit] {
		background-color: #fdd68b;
		border-color: #f7d189;
		font-size: 18px;
		padding: 4px 10px;
		color: #000000;
		border-radius: 5px;
		
		&:hover{
			background-color: #fdd68b;
		}
	}
	
	.search, input[type=text], input[type='email'], input[type='password'] {
		color: #3a5868;
		border-radius: 5px;
		border-width: 2px;
		border-color: #e8e8e8;
		text-align: center;

		&:focus {
			border-color: #fdd68b;
			border-radius: 10px;
		}
	}	
	.row{
		margin: 0px;
		width: 100%;
	}

	.org{
		border-left: 1px double #888;
	}

	h1 {
		font-color: #3a5868;
	}
	
	h3 {
		color: #3a5868;
		font-size: 2.5em;
		font-family: Helvetica, sans-serif;
	}

	h4 {
		color: #3a5868;
		font-size: 2em;
		font-family: Helvetica, sans-serif;
	}

	h5 {
		color: #3a5868;
		font-family: Helvetica, sans-serif;
		&:hover{
			font-weight: bold;
		}	
	}

	h6 {
		font-weight: bold;
	}

}

.top-bar, .expanded{
	background-color: #88a4b3;
	.title-area{
		background-color: #88a4b3;
		color: #ffffff;
	}
	a {
		background-color: #88a4b3;
		&:hover, &:active {
			background-color: darken(#88a4b3, 5%);
			color: #fff;
		}
	}
}

.tab-bar-section{
	border-left: solid 1px lighten(#88a4b3, 10%);
	background-color: #88a4b3;
	.title-area{
		background-color: #88a4b3;
		color: #ffffff;
		a {
			background-color: #88a4b3;
			&:hover, &:active {
				background-color: darken(#88a4b3, 5%);
				color: #fff;
			}
		}
	}
	a {
		background-color: #88a4b3;
		&:hover, &:active {
			background-color: darken(#88a4b3, 5%);
			color: #fff;
		}
	}
	ul {
    width: 100%;
    height: auto;
    display: block;
    background: #88a4b3;
    font-size: 16px;
    margin: 0; }

	ul li > a {
	    display: block;
	    width: 100%;
	    color: white;
	    padding: 12px 0 12px 0;
	    padding-left: 15px;
	    font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
	    font-size: 0.8125em;
	    font-weight: bold;
	    background: #88a4b3; }


}

.off-canvas-list{
	li a {
		background-color: #88a4b3;
		&:hover, &:active {
			background-color: darken(#88a4b3, 5%);
			color: #fff;
		}	
	}
	.cat {
		border-bottom: 3px dotted darken(#88a4b3, 5%);
		color: #fdd68b;
	}
	.cat {
        border-bottom: 3px dotted darken(#88a4b3, 5%);
        color: #fdd68b;
        }
	.oc-head {
		padding: 10px;
		font-weight: bold;
		border-bottom: 4px solid darken(#88a4b3, 5%);
	}
}

.happy{
	border-bottom: 1px solid #111;
}

.center{
		text-align: center;
		position: relative;
		vertical-align: middle;
	}


.home-footer{
	text-align: center;
	background-color: #3a5868;
	padding: 1em 0em;
	width: 100%;
	color: #ffffff;

	a {
		color: #ffffff;
		font-weight: bold;
		padding: 1em 1.75em;
		margin-top: 12px;

		&:hover {
			background-color: #3a5868;
			color: #fff;
		}

		&:visited {
			color: #fff;
		}
	}

	@media (min-height: 400px) {
	position: fixed; 
	bottom: 0px;
	}

}

.header-search{
	color: #3a5868;
	border-width: 2px;
	border-color: #e8e8e8;
	&:focus {
		border-color: #fdd68b;
	}
}

.full-width-row {
	width: 100%;
	/*background-color: #333333;*/
	//background: url( asset-path('assets/austin_background.jpg', image)) no-repeat;
	min-height: 680px; 
	// background-size: cover; 
	padding: 10em 0em; 

	h1 {
		font-color: #3a5868;
	}
	
	h3 {
		color: #3a5868;
		font-size: 2.5em;
		font-family: Helvetica, sans-serif;
	}

	h4 {
		font-size: 2em;
	}

	.center{
		text-align: center;
		position: relative;
		vertical-align: middle;
	}

	#user_email, #user_password, #user_password_confirmation, .search {
		/*background-color: transparent;*/
		color: #3a5868;
		border-radius: 5px;
		border-width: 2px;
		border-color: #e8e8e8;
		text-align: center;

		&:focus {
			border-color: #fdd68b;
			border-radius: 10px;
		}
	}

	.button {
		background-color: #fdd68b;
		border-color: #f7d189;
		font-size: 18px;
		padding: 4px 10px;
		color: #000000;
		border-radius: 5px;
		
		&:hover{
			color: #ffffff;
		}
	}
}
.off-canvas-list li{
	color: #ffffff;

}

canvas{
        width: 100% !important;
        max-width: 800px;
        height: auto !important;
        @media (max-width: 1024px) {
        	width: 100% !important;
                max-width: 500px;
                height: auto !important;

        }
    }

ul.left.admin li a{
	color: black;
	font-size: 1.5em;
}

